deploy/kubernetes/canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary
  labels:
    app: canary
    version: ${VERSION_LABEL}
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: canary
    version: ${VERSION_LABEL}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: canary
  labels:
    app: canary
    version: ${VERSION_LABEL}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary
      version: ${VERSION_LABEL}
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      name: canary
      labels:
        app: canary
        version: ${VERSION_LABEL}
    spec:
      serviceAccount: canary
      containers:
      - image: ${IMAGE_NAME}:${IMAGE_VERSION}
        name: canary
        command:
        - "/opt/devtio/canary"
        - "-config"
        - "/canary-configuration/config.yaml"
        - "-v"
        - "${VERBOSE_MODE}"
        volumeMounts:
        - name: canary-configuration
          mountPath: "/canary-configuration"
        livenessProbe:
          failureThreshold: 20
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        readinessProbe:
          failureThreshold: 20
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
      volumes:
      - name: canary-configuration
        configMap:
          name: canary
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: canary-gateway
  labels:
    app: canary
    version: ${VERSION_LABEL}  
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary
  labels:
    app: canary
    version: ${VERSION_LABEL}
spec:
  hosts:
  - "canary.192.168.99.100.nip.io:31380"
  gateways:
  - canary-gateway
  http:
  - match:
    - uri:
        exact: /health
    - uri:
        prefix: /virtual-services
    route:
    - destination:
        host: canary
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary-fake
  labels:
    app: canary
    version: ${VERSION_LABEL}
spec:
  hosts:
  - "*"
  gateways:
  - canary-gateway
  http:
  - match:
    - uri:
        exact: /health
    - uri:
        prefix: /virtual-services
    route:
    - destination:
        host: canary-broken
        port:
          number: 8080
